# rag-challenge

./: Basic RAG Implementation.ipynb  Makefile  README.md  detailed_comparison.csv  env_sample  evaluation_df.csv  merged_questions_and_responses.csv  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
app/: config.py  resources.py
documents/: documents_segmentation.json
